<resources>
    <string name="app_name">Smart Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="get_it">Get It</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="decrypt_it">Decrypt it</string>
    <string name="send_it">Send It</string>
    <string name="username_encrypted">Username Encrypted</string>
    <string name="password_encrypted">Password Encrypted</string>
    <string name="username_decrypted">Username Decrypted</string>
    <string name="password_decrypted">Password Decrypted</string>
</resources>
