<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ReceivefromServer"
    tools:showIn="@layout/activity_receivefrom_server">

    <TextView
        android:id="@+id/encryptedUsername"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="96dp"
        android:text="@string/username_encrypted"
        app:layout_constraintBottom_toTopOf="@+id/encryptedPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/encryptedPassword"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="14dp"
        android:text="@string/password_encrypted"
        app:layout_constraintBottom_toTopOf="@+id/getIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encryptedUsername" />

    <Button
        android:id="@+id/getIt"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="16dp"
        android:text="@string/get_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encryptedPassword" />

    <Button
        android:id="@+id/sendIt"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="29dp"
        android:text="@string/send_it"
        app:layout_constraintBottom_toTopOf="@+id/encryptedUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/decryptIt"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="141dp"
        android:text="@string/decrypt_it"
        app:layout_constraintBottom_toTopOf="@+id/decryptedUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getIt" />

    <TextView
        android:id="@+id/decryptedUsername"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/username_decrypted"
        app:layout_constraintBottom_toTopOf="@+id/decryptedPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decryptIt"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/decryptedPassword"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:text="@string/password_decrypted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decryptedUsername"
        tools:ignore="LabelFor"
        tools:text="Password Encrypted" />



</android.support.constraint.ConstraintLayout>